# InChI-Web-Demo

./: .devcontainer.json  .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
inchi/: README.md  util.c.patch
inchi/INCHI-1-TEST/: inchify_InChI_TestSet.sh  inchify_zzp.sh
inchi/INCHI_WEB/: CMakeLists.txt  inchi_web.c  makefile  makefile_InChI_1.06
ketcher/: README.md
ketcher/react-app/: package.json
ketcher/react-app/patches/: ketcher-react+2.11.0.patch
ketcher/react-app/public/: index.html
ketcher/react-app/src/: App.js
pages/: .gitignore  build_wasm_modules.sh  download_packages.sh  inchi.js  inchi_versions.json  index.html  index.js  rinchi.js  utils.sh
pages/components/: 107-moin-options.html  about.html  base-options.html  components.js  inchi-tools.html  latest-enhanced-stereo-options.html  report-feedback.html  report-mask.html  rinchi-tools.html  tautomer-options.html
pages/components/options/: 106-options.html  base-options.html  latest-enhanced-stereo-options.html  latest-moin-options.html  stereo-base-options.html
pages/css/: index.css  report-feedback.css  report-mask.css
pages/img/: license_notice.md
rinchi/: rinchi.patch
test/: inchi.test.js  package.json  rinchi.test.js
